fix, feat: add firefox support for scrollbar, add curve on lain image and disable effects button text colour is wrong in light mode

--- a/web/input.css
+++ b/web/input.css
@@ -24,7 +24,7 @@
     src: url("./fonts/YanoneKaffeesatz.ttf");
 }
 
-/* ✨ custom devgoldy.xyz scroll bar */
+/* ✨ custom devgoldy.xyz scrollbar */
 /* --------------------------------- */
 ::-webkit-scrollbar {
     width: 10px;
@@ -39,6 +39,13 @@
     background: #f1f1f1;
     border-radius: 10px;
 }
+
+/* firefox scrollbar support */
+html {
+    scrollbar-color: #f1f1f1 transparent;
+}
+
+/* --------------------------------- */
 
 @layer base {
 
